# jdksmidi

./: .clang-format  .gitignore  1122  AUTHORS  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTORS  COPYING  README  TODO.txt  configure  format.sh  magic.mk  project.mk  restyle.sh
RtMidi/: RtMidi.cpp  RtMidi.h
docs-dev/: Doxyfile  Doxyfile_OLD  NCDoxyfile
examples/: create_midifile.cpp  jdksmidi_rewrite_midifile.cpp  jdksmidi_test_drv.cpp  jdksmidi_test_drvwin32.cpp  jdksmidi_test_multitrack.cpp  jdksmidi_test_multitrack1.cpp  jdksmidi_test_parse.cpp  jdksmidi_test_sequencer.cpp  jdksmidi_test_show.cpp  rewrite_midifile.cpp  vrm_music_gen.cpp  vrm_music_gen_readme.txt
examples/win32/: jdksmidi_test_drvwin32.cpp  test_advancedsequencer.cpp  test_advancedsequencer_README.txt  test_stepsequencer.cpp  test_stepsequencer.h  test_win32.cpp  test_win32.h  test_win32_README.txt  test_win32_player.cpp  test_win32_player.h  test_win32_player_README.txt
include/jdksmidi/: AlsaDriver.h  MidiTimer.h  advancedsequencer.h  driver.h  driverdump.h  driverwin32.h  edittrack.h  file.h  fileread.h  filereadmultitrack.h  fileshow.h  filewrite.h  filewritemultitrack.h  keysig.h  manager.h  matrix.h  midi.h  msg.h  multitrack.h  parser.h  process.h  queue.h  sequencer.h  showcontrol.h  (+9 more)
songs/: bwv599.mid  bwv604.mid  create_midifile.mid  t0_after_t1_with_lag.mid  t1_after_t0.mid  test_sysex.mid  vrm.mid  vrm_di_0.mid  vrm_in_47_n1_7_sd_0.4_nd_0.1_de_1.mid  vrm_se_4_in_19_tr_36_n1_10_sd_2_nd_2_de_6_pr_1_md_70.mid  vrm_se_8_in_80_tr_60_n0_5_n1_12_sd_.5_de_1.mid  vrm_se_8_in_91_tr_60_n0_5_n1_12_sd_.5_de_1.mid
src/: jdksmidi_advancedsequencer.cpp  jdksmidi_driver.cpp  jdksmidi_driverdump.cpp  jdksmidi_edittrack.cpp  jdksmidi_file.cpp  jdksmidi_fileread.cpp  jdksmidi_filereadmultitrack.cpp  jdksmidi_fileshow.cpp  jdksmidi_filewrite.cpp  jdksmidi_filewritemultitrack.cpp  jdksmidi_keysig.cpp  jdksmidi_manager.cpp  jdksmidi_matrix.cpp  jdksmidi_midi.cpp  jdksmidi_msg.cpp  jdksmidi_multitrack.cpp  jdksmidi_parser.cpp  jdksmidi_process.cpp  jdksmidi_queue.cpp  jdksmidi_sequencer.cpp  jdksmidi_showcontrol.cpp  jdksmidi_showcontrolhandler.cpp  jdksmidi_smpte.cpp  jdksmidi_sysex.cpp  jdksmidi_tempo.cpp  jdksmidi_tick.cpp  jdksmidi_track.cpp  jdksmidi_utils.cpp
(+14 files in other folders)
